k8s/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-api
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
      - name: web-api
        image: jvictorsm/backend
        resources:
          limits:
            memory: "256Mi"
            cpu: "400m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8000
        startupProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 2
          httpGet:
            path: /ready
            port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-api
  namespace: dev
spec:
  selector:
    app: web-api
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
  type: NodePort
