k8s/dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-frontend
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
      - name: web-frontend
        image: jvictorsm/frontend
        resources:
          limits:
            memory: "256Mi"
            cpu: "400m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-frontend
  namespace: dev
spec:
  selector:
    app: web-frontend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
  type: NodePort
