k8s/dev/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: dev
spec:
  serviceName: redis
  replicas: 3
  selector:
    matchLabels:
      db: redis
  template:
    metadata:
      labels:
        db: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2
        ports:
        - containerPort: 6379
          name: db
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        startupProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          exec:
            command: ["redis-cli", "ping"]
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          exec:
            command: ["redis-cli", "ping"]
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          exec:
            command: ["redis-cli", "ping"]
        volumeMounts:
        - name: redis-data
          mountPath: /redis-data
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: db
                  operator: In
                  values:
                  - redis
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: redis
#   namespace: dev
# spec:
#   podSelector:
#     matchLabels:
#       db: redis
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: web-api
#     ports:
#     - protocol: TCP
#       port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  clusterIP: None
  selector:
    db: redis
  ports:
  - port: 6379
    targetPort: 6379
